Apply miniapp UI updates to served static bundle